--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Chuma",
-  "name": "Chuma Point App",
+  "short_name": "HealthTracker",
+  "name": "Health Tracker App",
   "icons": [
     {
       "src": "favicon.ico",
